--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,16 +18,23 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  flutter_screenutil: ^5.0.0+2
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.3
+  location: ^4.3.0
+  connectivity_plus: ^1.0.4
+  permission_handler: ^8.1.2
+  geocoder: ^0.2.1
+  intl: ^0.17.0
+  just_audio: ^0.8.0
+ 
+
+  
 
 dev_dependencies:
   flutter_test:
@@ -43,11 +50,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
