--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.11.0 <3.0.0"
 
 dependencies:
   flutter_screenutil: ^5.0.0+2
@@ -29,9 +29,10 @@ dependencies:
   location: ^4.3.0
   connectivity_plus: ^1.0.4
   permission_handler: ^8.1.2
-  geocoder: ^0.2.1
+  geocoding: ^2.0.0
   intl: ^0.17.0
   just_audio: ^0.8.0
+  flutter_staggered_grid_view: ^0.4.0
  
 
   
