--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.11.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter_screenutil: ^5.0.0+2
@@ -31,8 +31,10 @@ dependencies:
   permission_handler: ^8.1.2
   geocoding: ^2.0.0
   intl: ^0.17.0
-  just_audio: ^0.8.0
+  
   flutter_staggered_grid_view: ^0.4.0
+  just_audio: ^0.8.0
+  url_launcher: ^6.0.9
  
 
   
