--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,10 @@ dependencies:
   permission_handler: ^8.1.2
   geocoding: ^2.0.0
   intl: ^0.17.0
-  
   flutter_staggered_grid_view: ^0.4.0
-  just_audio: ^0.8.0
+  audioplayers: ^0.19.1
   url_launcher: ^6.0.9
+  audio_session: ^0.1.5
  
 
   
