--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,12 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.0
   audioplayers: ^0.19.1
   url_launcher: ^6.0.9
-  audio_session: ^0.1.5
+  vector_math: ^2.1.0
+
+  
+
+
+ 
  
 
   
