--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,15 +26,21 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   http: ^0.13.3
-  location: ^4.3.0
   connectivity_plus: ^1.0.4
   permission_handler: ^8.1.2
   geocoding: ^2.0.0
   intl: ^0.17.0
-  flutter_staggered_grid_view: ^0.4.0
   audioplayers: ^0.19.1
   url_launcher: ^6.0.9
   vector_math: ^2.1.0
+  geolocator: ^7.6.0
+  shared_preferences: ^2.0.7
+  provider: ^6.0.1
+
+
+ 
+
+
 
   
 
