--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   geolocator: ^7.6.0
   shared_preferences: ^2.0.7
   provider: ^6.0.1
+  modal_bottom_sheet: ^2.0.0
+  lottie: ^1.2.1
+  quran: ^1.0.4
+  flutter_map: ^0.14.0
+  flutter_local_notifications: ^9.1.4
+  
+
 
 
  
@@ -66,7 +73,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
