--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,13 +15,15 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter_screenutil: ^5.0.0+2
+  flutter_localizations: 
+    sdk: flutter         
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
@@ -31,7 +33,6 @@ dependencies:
   geocoding: ^2.0.0
   intl: ^0.17.0
   audioplayers: ^0.19.1
-  url_launcher: ^6.0.9
   vector_math: ^2.1.0
   geolocator: ^7.6.0
   shared_preferences: ^2.0.7
@@ -41,21 +42,7 @@ dependencies:
   quran: ^1.0.4
   flutter_map: ^0.14.0
   flutter_local_notifications: ^9.1.4
-  
-
-
-
- 
-
-
-
-  
-
-
- 
- 
-
-  
+  google_mobile_ads: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +53,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
