--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,5 +68,8 @@ flutter {
 }
 
 dependencies {
+        def billing_version = "4.0.0"
+
+    implementation "com.android.billingclient:billing:$billing_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
