--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+2
+version: 1.0.0+3
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -43,7 +43,10 @@ dependencies:
   flutter_map: ^0.14.0
   flutter_local_notifications: ^9.1.4
   google_mobile_ads: ^1.0.1
-
+  localstorage: ^4.0.0+1
+  rflutter_alert: ^1.0.3
+  purchases_flutter: ^3.8.0
+  material_dialogs: ^1.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
