--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,36 +21,34 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  flutter_screenutil: ^5.0.0+2
-  flutter_localizations: 
-    sdk: flutter         
   flutter:
     sdk: flutter
+
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.3
-  connectivity_plus: ^1.0.4
-  permission_handler: ^8.1.2
-  geocoding: ^2.0.0
+  flutter_screenutil: ^5.1.0
+  provider: ^6.0.2
+  shared_preferences: ^2.0.12
+  geolocator: ^8.0.3
   intl: ^0.17.0
-  audioplayers: ^0.19.1
-  vector_math: ^2.1.0
-  geolocator: ^7.6.0
-  shared_preferences: ^2.0.7
-  provider: ^6.0.1
-  modal_bottom_sheet: ^2.0.0
-  lottie: ^1.2.1
-  quran: ^1.0.4
+  shimmer: ^2.0.0
+  http: ^0.13.4
+  geocoding: ^2.0.2
+  expandable_page_view: ^1.0.10
+  table_calendar: ^3.0.3
+  hijri: ^3.0.0
+  audioplayers: ^0.20.1
   flutter_map: ^0.14.0
-  flutter_local_notifications: ^9.1.4
-  google_mobile_ads: ^1.0.1
-  localstorage: ^4.0.0+1
-  rflutter_alert: ^1.0.3
-  purchases_flutter: ^3.8.0
+  flutter_local_notifications: ^9.2.0
+  quran: ^1.0.4
+  lottie: ^1.2.1
+  modal_bottom_sheet: ^2.0.0
+  google_fonts: ^2.2.0
+  purchases_flutter: ^3.9.2
   material_dialogs: ^1.1.1
-  flutter_native_splash: ^1.3.3
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  google_mobile_ads: ^1.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
