--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+9
+version: 1.0.0+11
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -50,6 +50,7 @@ dependencies:
   material_dialogs: ^1.1.1
   google_mobile_ads: ^1.0.1
   permission_handler: ^8.3.0
+  drop_cap_text: ^1.1.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
